--- a/index.html
+++ b/index.html
@@ -46,7 +46,27 @@
     </section>
     <div class="container slide-in-left">
         <h1>About Books and Brownies</h1>
-        <p>Books and Brownies is a homeschool book club where moms and kids come together to swap books, read, and share delicious brownies. It's all about community, learning, and fun!</p>
+        <p>Books and Brownies is more than just a homeschool book club—it's a community where families come together to foster a love for reading, creativity, and wholesome fun. Our club is designed for both moms and kids, creating a unique space where family bonds are strengthened through shared experiences and activities.</p>
+
+		<h2>Book Swaps</h2>
+
+		<p>At the heart of Books and Brownies is our cherished book swap tradition. Each meeting, kids and moms bring books they've enjoyed and exchange them with others. This not only promotes reading diversity but also helps instill the joy of discovering new stories and genres. Our book swaps are an exciting way for children to broaden their literary horizons and for parents to share beloved classics and contemporary favorites.</p>
+
+		<h2>Creative Activities</h2>
+
+		<p>Our club is also a hub for hands-on, creative activities that spark curiosity and learning. From making your own butter to crafting personalized bookmarks, each session offers a fun and educational experience. These activities are designed to complement the themes of the books we explore, making the stories come alive in a tangible way. It's all about encouraging creativity, critical thinking, and a do-it-yourself spirit that aligns with our homeschool values.</p>
+
+		<h2>Sharing Treats</h2>
+
+		<p>No meeting at Books and Brownies is complete without a selection of delicious homemade treats. While brownies are our signature sweet, we also share other goodies, from freshly baked cookies to seasonal snacks. Moms and kids alike look forward to this time of sharing, where everyone can enjoy a treat, exchange recipes, and even learn to bake new goodies together. It's a delicious way to bond and create lasting memories.</p>
+
+		<h2>Community Development</h2>
+
+		<p>Books and Brownies is committed to building a supportive and nurturing community. We believe in the power of literature to bring people together and the importance of creating a space where families can connect, share experiences, and support each other's homeschooling journeys. Our club is a place where friendships are formed, ideas are exchanged, and everyone feels welcome and valued.</p>
+
+		<h2>Homeschooling & Family-Friendly Fun</h2>
+
+		<p>As a homeschool-focused club, we understand the unique challenges and joys of homeschooling. Books and Brownies provides a supportive environment where homeschooling families can come together for both educational enrichment and social interaction. Our meetings are filled with family-friendly fun, ensuring that everyone—moms, kids, and even younger siblings—has a great time. Whether it's through our book discussions, creative projects, or shared treats, we aim to make learning enjoyable and memorable for the whole family.</p>
     </div>
 
     <!-- Activities Section with Parallax -->
@@ -58,7 +78,7 @@
         <ul>
             <li>Book Swaps</li>
             <li>Storytime</li>
-            <li>Baking Brownies Together</li>
+            <li>Creative activities</li>
         </ul>
     </div>
 
@@ -68,7 +88,7 @@
     </section>
     <div class="container slide-in-left">
         <h1>Our Latest Visit</h1>
-        <p>Last week, we had a great time reading "The Adventures of Tom Sawyer" and baking chocolate chip brownies together. Everyone had a blast!</p>
+        <p>Last quarter, we had a wonderful time at our time where we enjoyed fellowship, playing, and sweet treats." The highlight of our gathering was a delightful butter-making activity. Each child got hands-on experience churning cream into creamy, homemade butter, learning the process and enjoying the fruits of their labor. It was a fantastic blend of literature, creativity, and tasty treats that left everyone with sweet memories!</p>
     </div>
 
     <!-- Join Us Section with Parallax -->
@@ -77,7 +97,7 @@
     </section>
     <div class="container slide-in-left">
         <h1>Join Us</h1>
-        <p>Interested in joining the fun? <a href="mailto:info@booksandbrownies.com">Contact us</a> for more information!</p>
+        <p>Interested in joining the fun? <!--a href="mailto:info@booksandbrownies.com">Contact us</a> for more information--></p>
     </div>
 
     <footer id="join" class="parallax-container">
